<resources>
    <string name="app_name">Cook</string>
    <string name="next">Next</string>
    <string name="dsa123">CookBook</string>
    <string name="bvcbcvbcv">TODO</string>
    <string name="bcxzxc">10:09</string>
    <string name="nbvn">CookBook</string>
    <string name="mnb">TODO</string>
    <string name="tre">Next</string>
    <string name="bmv">Борщ</string>
    <string name="орп">TODO</string>
    <string name="oiuuy">Цезарь</string>
    <string name="негегн">Спагетти</string>
    <string name="jhggjh">Мол. коктейль</string>
    <string name="kjhkjh">Блинчики</string>
    <string name="tyrgf">TODO</string>
    <string name="bgfhgf">TODO</string>
    <string name="bfghfg">TODO</string>
    <string name="iutyurty">TODO</string>
    <string name="fasfasc">Говядина на косточке - 500г. Капуста- 400г 3-4 картофелины 1 морковь 1 больша луковица 3-4 зуба чеснока 2 вкусных сладких свеклы. Можно предварительно попробовать. Безвкусная свекла будет просто бесполезна 2-3 ст.л. томатной пасты. Можно использовать и нормальные, свежие помидоры или помидоры в собственном соку. Я пользуюсь обычно именно ими. 2.ч.л соли.</string>
    <string name="bvcbcvb">Борщ</string>
    <string name="ytryrt">TODO</string>
</resources>